# idate-macro

./: README.md  USAGE.md  calibration.json  install.bat  memory_patterns.json  prompt.txt  pyproject.toml  run.bat
.github/: copilot-instructions.md
configs/: game_profile.toml  keymap.toml
dump/: REVERSE_ENGINEERING_REFERENCE.md
src/: __init__.py  cli.py  config.py  fast_detector.py  gui.py  rhythm_detector.py
src/capture/: __init__.py  mss_capture.py
src/debug/: __init__.py  overlay.py  trace.py
src/idate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/input/: __init__.py  pynput_driver.py  sendinput_driver.py
src/memory/: __init__.py  bms_parser.py  memory_detector.py  process.py  reader.py  scan_interactive.py  scanner.py
src/ml/: __init__.py  data_generator.py  train_yolo.py  upload_to_roboflow.py  yolo_detector.py
src/overlay/: __init__.py  fast_overlay.py  pygame_overlay.py  pygame_overlay_new.py  win32_overlay.py
src/patterns/: __init__.py  chords.py
src/runtime/: __init__.py  control.py
src/timing/: __init__.py  fusion.py  map_parser.py
src/vision/: __init__.py  idate_detector.py  idate_detector_v2.py  lane_detector.py  note_tracker.py
